--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@svgr/webpack": "^6.5.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "sass": "^1.58.0",
     "tailwindcss": "^3.2.4"
   }
 }
